[package]
name = "tracing-log-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
fastrand = "2"
thread_local = "1"

[dev-dependencies]
criterion = "0.8"
statrs = "0.18"

[[bench]]
name = "sampling"
harness = false
