[package]
name = "tracing-log-sample"
version = "0.1.0"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
description = "A tracing-subscriber layer that rate-limits log output using reservoir sampling"
license = "Apache-2.0"
repository = "https://github.com/conradludgate/tracing-log-sample"
readme = "README.md"
keywords = ["tracing", "logging", "sampling", "rate-limit"]
categories = ["development-tools::debugging"]
exclude = ["examples/demo.avif"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
fastrand = "2"
thread_local = "1"

[dev-dependencies]
criterion = "0.8"
statrs = "0.18"

[[bench]]
name = "sampling"
harness = false
